--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "server for zoom-clone",
   "main": "server.js",
   "scripts": {
+    "heroku-postbuild": "cd client && yarn && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "mhkasif",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "peer": "^0.5.3",
