--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "server for zoom-clone",
   "scripts": {
-    "heroku-postbuild": "cd client && yarn && yarn run build",
+    "heroku-postbuild": "cd ../client && yarn && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
