--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "zoom clone by mhk",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm i --prefix client && npm run build --prefix client"
 
   },
   "repository": {
