--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "zoom-clone",
+  "name": "zoom-clone-server",
   "version": "1.0.0",
-  "description": "zoom clone by mhk",
-  "main": "index.js",
+  "description": "server for zoom-clone",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "npm i --prefix client && npm run build --prefix client"
+    "client-install":"npm install --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev":"concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd npm install --prefix client && npm run build --prefix client"
 
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mhkasif/zoom-clone.git"
-  },
-  "author": "mhk",
+  "author": "mhkasif",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mhkasif/zoom-clone/issues"
-  },
-  "homepage": "https://github.com/mhkasif/zoom-clone#readme"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6",
+    "peer": "^0.5.3",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
+  }
 }
